--- a/web/themes/custom/pcc/css/components/directories.css
+++ b/web/themes/custom/pcc/css/components/directories.css
@@ -15,7 +15,7 @@
     display: none;
   }
 
-  .field--name-localgov-location{
+  .field--type-geofield {
     margin-bottom: var(--spacing-large);
   }
 
@@ -54,5 +54,9 @@
     hr {
       margin: var(--spacing-large) 0;
     }
+  }
+
+  .lgd-page-title-block__subheader {
+    font-size: var(--font-size) !important;
   }
 }
