--- a/web/themes/custom/pcc/templates/content/node--localgov-directories-venue--full.html.twig
+++ b/web/themes/custom/pcc/templates/content/node--localgov-directories-venue--full.html.twig
@@ -87,10 +87,11 @@
 	<article{{attributes.addClass(classes)}}>
 		<div class="lgd-row">
 			<div class="lgd-row__full">
-				{{ content.group_venue.localgov_location }}
+				{{ node.localgov_location.entity.location | view }}
+
 				{{ content.body }}
 			</div>
-			{% if content.group_venue.localgov_directory_opening_times or content.group_venue.localgov_directory_notes or content.localgov_directory_files %}
+			{% if content.group_venue.localgov_directory_opening_times |render|trim or content.group_venue.localgov_directory_notes |render|trim or content.localgov_directory_files |render|trim %}
 				<div class="lgd-row__one-half">
 					<div class="venue__details">
 						<div class="venue__title">
@@ -100,6 +101,7 @@
 							<hr>
 
 						</div>
+						{{ node.localgov_location.entity.postal_address | view }}
 						{{ content.group_venue.localgov_directory_opening_times }}
 						{{ content.group_venue.localgov_directory_notes }}
 						{{ content.localgov_directory_files }}
@@ -107,7 +109,7 @@
 					</div>
 				</div>
 			{% endif %}
-			{% if content.group_enquiries %}
+			{% if content.group_enquiries |render|trim %}
 				<div class="lgd-row__one-half">
 					<div class="venue__details">
 						<div class="venue__title">
