75 venue page design (#76)
* directories design and css.

* map fixes

--- a/web/themes/custom/pcc/templates/content/node--localgov-directories-venue--full.html.twig
+++ b/web/themes/custom/pcc/templates/content/node--localgov-directories-venue--full.html.twig
@@ -80,18 +80,48 @@
     view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
   ]
 %}
+{{ attach_library('pcc/directories') }}
+
 
 <div class="lgd-container padding-horizontal">
 	<article{{attributes.addClass(classes)}}>
 		<div class="lgd-row">
-			<div class="lgd-row__two-thirds">
-				{{ content.group_venue }}
-			</div>
-			<div class="lgd-row__one-third">
+			<div class="lgd-row__full">
+				{{ node.localgov_location.entity.location | view }}
+
 				{{ content.body }}
-				{{ content.group_enquiries }}
-				{{ content.localgov_directory_files }}
 			</div>
+			{% if content.group_venue.localgov_directory_opening_times |render|trim or content.group_venue.localgov_directory_notes |render|trim or content.localgov_directory_files |render|trim %}
+				<div class="lgd-row__one-half">
+					<div class="venue__details">
+						<div class="venue__title">
+							<h3>
+								<i class="fa-solid fa-location-dot"></i>
+								Venue Details</h3>
+							<hr>
+
+						</div>
+						{{ node.localgov_location.entity.postal_address | view }}
+						{{ content.group_venue.localgov_directory_opening_times }}
+						{{ content.group_venue.localgov_directory_notes }}
+						{{ content.localgov_directory_files }}
+
+					</div>
+				</div>
+			{% endif %}
+			{% if content.group_enquiries |render|trim %}
+				<div class="lgd-row__one-half">
+					<div class="venue__details">
+						<div class="venue__title">
+							<h3>
+								<i class="fa-solid fa-user"></i>
+								Contact details</h3>
+							<hr>
+						</div>
+						{{ content.group_enquiries }}
+					</div>
+				</div>
+			{% endif %}
 		</div>
 	</article>
 </div>
