--- a/web/themes/custom/pcc/templates/content/node--localgov-directories-venue--full.html.twig
+++ b/web/themes/custom/pcc/templates/content/node--localgov-directories-venue--full.html.twig
@@ -91,13 +91,13 @@
 
 				{{ content.body }}
 			</div>
-			{% if content.group_venue.localgov_directory_opening_times |render|trim or content.group_venue.localgov_directory_notes |render|trim or content.localgov_directory_files |render|trim %}
+			{% if content.group_venue.localgov_directory_opening_times |render|trim or content.group_venue.localgov_directory_notes |render|trim or content.localgov_directory_files |render|trim or node.localgov_location.entity.postal_address |render|trim %}
 				<div class="lgd-row__one-half">
 					<div class="venue__details">
 						<div class="venue__title">
-							<h3>
+							<h4>
 								<i class="fa-solid fa-location-dot"></i>
-								Venue Details</h3>
+								Venue Details</h4>
 							<hr>
 
 						</div>
@@ -113,9 +113,9 @@
 				<div class="lgd-row__one-half">
 					<div class="venue__details">
 						<div class="venue__title">
-							<h3>
+							<h4>
 								<i class="fa-solid fa-user"></i>
-								Contact details</h3>
+								Contact details</h4>
 							<hr>
 						</div>
 						{{ content.group_enquiries }}
