--- a/web/themes/custom/pcc/css/base/base.css
+++ b/web/themes/custom/pcc/css/base/base.css
@@ -67,7 +67,11 @@ h6,
 
 .lgd-prev-next__list-item {
   flex-grow: 1;
-  flex-basis: 250px;
+  max-width: 50%;
+}
+
+.lgd-prev-next__list-item--next {
+  margin-left: auto;
 }
 
 .lgd-prev-next__list-item--next a {
@@ -81,3 +85,4 @@ h6,
   padding-inline-start: 0;
   padding-inline-end: var(--spacing-large);
 }
+
